--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* Variables, Custom Properties if ya nasty */
+
+:root {
+  --elevate_1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --elevate_2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
