--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,22 @@ a {
 .ReactModal__Overlay--before-close {
   opacity: 0;
 }
+
+/* Visually Hide Accessibility Links and such */
+
+.visible-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.visible-hidden:focus {
+  clip: auto;
+  height: auto;
+  overflow: auto;
+  position: absolute;
+  width: auto;
+}
