--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+/* Variables, Custom Properties if ya nasty */
+
+:root {
+  --elevate_1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --elevate_2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --bgPrimary: #DCE1E3;
+  --darkGrey: #5C5F58;
+  --brown: #591C0B;
+  --darkBlue: #004E7C;
+  --orange: #B73225;
+}
+
+/* Reset stuff */
+
 html {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -14,13 +28,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-/* Variables, Custom Properties if ya nasty */
-
-:root {
-  --elevate_1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --elevate_2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 /* Modal Animations */
