--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 :root {
   --elevate_1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   --elevate_2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --bgPrimary: #DCE1E3;
+  --bgPrimary: #ffffff22;
   --darkGrey: #5C5F58;
   --brown: #591C0B;
   --darkBlue: #004E7C;
@@ -15,6 +15,10 @@
 html {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 *, *:before, *:after {
