--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,3 @@
-/* Variables, Custom Properties if ya nasty */
-
-/* I have these here right now for easier time trying out styles in dev tools. */
-
-/* TODO: Delete these for prod */
-
-:root {
-  --elevate_1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --elevate_2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --darkGrey: #5C5F58;
-  --orange: #FF9F1C;
-  --darkBlue: #004E7C;
-  --red: #BF1A2F;
-  --apricot: #FFBF69;
-  --persianGreen: #339989;
-  --white: #ffffff;
-  --black: #121212;
-}
-
 /* Reset stuff */
 
 html {
@@ -24,12 +5,12 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-h1 {
-  margin-top: 0;
-}
-
 *, *:before, *:after {
   box-sizing: inherit;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 body {
@@ -58,7 +39,7 @@ a {
   opacity: 0;
 }
 
-/* Visually Hide Accessibility Links and such */
+/* Visually Hide Accessibility Links */
 
 .visible-hidden {
   clip: rect(1px, 1px, 1px, 1px);
